Desafio das Statups

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    
     <title>React App</title>
+
+
+    <script src="https://cdn.anychart.com/csv-data/msft-daily-short.js"></script>
+    <script src="https://cdn.anychart.com/csv-data/orcl-daily-short.js"></script>
+    <script src="https://cdn.anychart.com/csv-data/csco-daily-short.js"></script>
+    <script src="https://cdn.anychart.com/csv-data/ibm-daily-short.js"></script>
+
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
