--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A rede social de Startups"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     
-    <title>React App</title>
+    <title>Startup Connection</title>
 
 
     <script src="https://cdn.anychart.com/csv-data/msft-daily-short.js"></script>
